--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >-
   Especialista em Data Science, Analytics e Machine Learning. Transformando dados 
   complexos em eficiência operacional na maior operadora ferroviária do Brasil.
 baseurl: "" # deixe vazio para user site
-url: "https://guilherme-cavalheri.github.io"
+url: "https://guilhermecavalheri.github.io"
 
 # Social
 linkedin_username: guilherme-cavalheri
